--- a/package.json
+++ b/package.json
@@ -1,66 +1,72 @@
 {
-    "name": "b_glstore",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "directories": {
-        "doc": "docs"
-    },
-    "scripts": {
-        "dev": "nodemon --exec ts-node src/server.ts",
-        "migration:create": "sequelize-cli migration:generate --name",
-        "migrate": "ts-node src/configs/database/migrations.ts",
-        "migrate:rollback": "ts-node src/configs/database/migrations.ts rollback",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@types/umzug": "^2.3.9",
-        "axios": "^1.8.4",
-        "bcrypt": "^5.1.1",
-        "cookie-parser": "^1.4.7",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.7",
-        "express": "^4.21.2",
-        "inversify": "^7.2.0",
-        "jsdoc": "^4.0.4",
-        "jsonwebtoken": "^9.0.2",
-        "multer": "^1.4.5-lts.2",
-        "mysql2": "^3.14.0",
-        "nodemailer": "^6.10.0",
-        "reflect-metadata": "^0.2.2",
-        "sequelize": "^6.37.6",
-        "sequelize-typescript": "^2.1.6",
-        "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1",
-        "umzug": "^3.8.2",
-        "yup": "^1.6.1"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.23.0",
-        "@types/bcrypt": "^5.0.2",
-        "@types/cookie-parser": "^1.4.8",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^5.0.1",
-        "@types/inversify": "^2.0.32",
-        "@types/jsonwebtoken": "^9.0.9",
-        "@types/multer": "^1.4.12",
-        "@types/node": "^22.13.13",
-        "@types/nodemailer": "^6.4.17",
-        "@types/sequelize": "^4.28.20",
-        "@types/swagger-jsdoc": "^6.0.4",
-        "@types/swagger-ui-express": "^4.1.8",
-        "@types/yup": "^0.29.14",
-        "eslint": "^9.23.0",
-        "globals": "^16.0.0",
-        "nodemon": "^3.1.9",
-        "sequelize-cli": "^6.6.2",
-        "ts-node": "^10.9.2",
-        "ts-node-dev": "^2.0.0",
-        "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.8.2",
-        "typescript-eslint": "^8.27.0"
-    }
+  "name": "b_glstore",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "scripts": {
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "migration:create": "sequelize-cli migration:generate --name",
+    "migrate": "ts-node src/configs/database/migrations.ts",
+    "migrate:rollback": "ts-node src/configs/database/migrations.ts rollback",
+    "test": "jest --detectOpenHandles --runInBand --coverage",
+    "pre:test": "cp .env.example .env"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/umzug": "^2.3.9",
+    "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "inversify": "^7.2.0",
+    "jest": "^29.7.0",
+    "jsdoc": "^4.0.4",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
+    "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
+    "reflect-metadata": "^0.2.2",
+    "sequelize": "^6.37.6",
+    "sequelize-typescript": "^2.1.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "ts-jest": "^29.3.2",
+    "umzug": "^3.8.2",
+    "yup": "^1.6.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.23.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/inversify": "^2.0.32",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.13.13",
+    "@types/nodemailer": "^6.4.17",
+    "@types/sequelize": "^4.28.20",
+    "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yup": "^0.29.14",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
+    "nodemon": "^3.1.9",
+    "sequelize-cli": "^6.6.2",
+    "supertest": "^7.1.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
+  }
 }
