--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Ambiente (development, test, production)
-NODE_ENV=test
+NODE_ENV=development
 
 # Configurações do banco de dados
 DB_HOST=localhost
